2004-04-21 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* link/z80/lkmain.c (afile): allow periods in directory names
	* link/z80/lkmain.c (afile),
	* as/mcs51/lkmain.c (afile),
	* as/hc08/lkmain.c (afile): allow linker script file to have an
	extension other than ".lnk"
	* link/z80/lklex.c (getfid),
	* link/z80/lkmain.c (parse),
	* as/mcs51/lklex.c (getfid),
	* as/mcs51/lkmain.c (parse),
	* as/hc08/lklex.c (getfid),
	* as/hc08/lkmain.c (parse): Support comments in the linker script
	file on lines by themselves and after filenames

2004-04-20 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* as/link_hc08.dsp: Added as/hc08/lkelf.c to project.

2004-04-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/z80/peeph-z80.def: removed some peephole rules that don't
	work with multibyte arithmetic (fixed bug #937126)
	* src/mcs51/peeph.def: fixed peephole rules 150-158 to apply only
	to registers and not global variables
	* src/SDCCicode.c (geniCodeAssign, ast2iCode, geniCodePostInc,
	geniCodePreInc, geniCodePostDec, geniCodePreDec,
	geniCodeLogicAndOr, geniCodeConditional): enforce strict lvalue
	checking for assignments not internally generated (fixed bug #931895)
	* src/SDCC.y (postfix_expr): ignore typedefs when looking for a
	structure member (fixed bug #930072)

2004-04-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCmain.c (linkEdit),
	* src/hc08/main.c (_hc08_parseOptions),
	* as/hc08/Makefile.in,
	* as/hc08/aslink.h,
	* as/hc08/asm.h,
	* as/hc08/m08pst.c,
	* as/hc08/lkrloc.c (relr, rele),
	* as/hc08/lkarea.c (lnkarea)
	* as/hc08/lkmain.c (afile, parse),
	* as/hc08/lkelf.c: support for ELF output
	* as/hc08/lks19.c (s19),
	* as/hc08/lkihx.c (ihx): ignore areas with the NOLOAD attribute

2004-04-17 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* as/mcs51/lkihx.c: Fixed bug #899105.

2004-04-16 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* doc/sdccman.lyx: Added instructons on how to convert MSVC .dsw and